cloj-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-clojure-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
