cloj-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
# spec:
#   defaultBackend:
#     service:
#       name: my-service
#       port:
#         number: 80                
spec:
  rules:
  - host: fenton.page
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: my-service
            port:
              number: 80
